# mangorest

./: .env.example  .gitignore  LICENSE  Procfile  README.md  app.json  compose-devdb.yml  compose-mongodb.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
mangorest/: __init__.py  app.py  auth.py  cli.py  config.py  exceptions.py  logger.py  mongo.py  services.py  views.py
scripts/: format.sh  lint-check.sh
tests/: db-init.js  test_auth.py  test_mangorest.py
