[tool.poetry]
name = "mangorest"
version = "0.1.0"
description = "Quickly turn MongoDB databases directly into RESTful API."
authors = ["Neil Van Alino <nvq.alino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
pymongo = {extras = ["srv"], version = "^3.12.1"}
python-dotenv = "^0.19.2"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.10b0"
isort = "^5.10.1"
mypy = "^0.910"
bandit = "^1.7.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3